crates/wh-iron-std/tests/snapshots/steel_msl_snapshots__hadamard_m_m20_f32_msl.snap
---
source: crates/wh-iron-std/tests/steel_msl_snapshots.rs
expression: msl
---
// Generated by Iron Kernels
#include <metal_stdlib>
using namespace metal;

kernel void iron_hadamard_m20(
    const device float *inp [[buffer(0)]],
    device float *out [[buffer(1)]],
    constant float &scale [[buffer(2)]],
    uint3 _tgid3 [[threadgroup_position_in_grid]],
    uint simd_lane [[thread_index_in_simdgroup]]
) {
    uint tgid_x = _tgid3.x;
    threadgroup float buf[20];
    uint signs[20];

    uint v1 = 445473u;
    uint v0 = 0u;
    signs[v0] = v1;
    uint v3 = 859202u;
    uint v2 = 1u;
    signs[v2] = v3;
    uint v5 = 702596u;
    uint v4 = 2u;
    signs[v4] = v5;
    uint v7 = 389384u;
    uint v6 = 3u;
    signs[v6] = v7;
    uint v9 = 747024u;
    uint v8 = 4u;
    signs[v8] = v9;
    uint v11 = 641086u;
    uint v10 = 5u;
    signs[v10] = v11;
    uint v13 = 234589u;
    uint v12 = 6u;
    signs[v12] = v13;
    uint v15 = 469147u;
    uint v14 = 7u;
    signs[v14] = v15;
    uint v17 = 938263u;
    uint v16 = 8u;
    signs[v16] = v17;
    uint v19 = 828943u;
    uint v18 = 9u;
    signs[v18] = v19;
    uint v21 = 984492u;
    uint v20 = 10u;
    signs[v20] = v21;
    uint v23 = 953176u;
    uint v22 = 11u;
    signs[v22] = v23;
    uint v25 = 889521u;
    uint v24 = 12u;
    signs[v24] = v25;
    uint v27 = 762211u;
    uint v26 = 13u;
    signs[v26] = v27;
    uint v29 = 508614u;
    uint v28 = 14u;
    signs[v28] = v29;
    uint v31 = 34194u;
    uint v30 = 15u;
    signs[v30] = v31;
    uint v33 = 68357u;
    uint v32 = 16u;
    signs[v32] = v33;
    uint v35 = 135722u;
    uint v34 = 17u;
    signs[v34] = v35;
    uint v37 = 270452u;
    uint v36 = 18u;
    signs[v36] = v37;
    uint v39 = 540873u;
    uint v38 = 19u;
    signs[v38] = v39;
    auto v_t = simd_lane;
    auto v_row = tgid_x;
    uint v42 = 20u;
    auto v_tg = ((v_row * v42) + v_t);
    auto v45 = inp[v_tg];
    float v_inp_f = static_cast<float>(v45);
    buf[v_t] = v_inp_f;
    threadgroup_barrier(mem_flags::mem_threadgroup);
    auto v_signs_t = signs[v_t];
    auto v48 = 0.0f;
    auto __ml_acc = v48;
    uint v53 = 1u;
    uint v49 = 0u;
    uint v50 = 20u;
    uint v51 = 1u;
    for (uint i_0 = v49; i_0 < v50; i_0 += v51) {
        auto v56 = 2.0f;
        auto v_bit = static_cast<float>(((v_signs_t >> i_0) & v53));
        auto v58 = 1.0f;
        auto v_buf_j = buf[i_0];
        auto v61 = __ml_acc;
        auto v62 = (((v56 * v_bit) - v58) * v_buf_j);
        auto v63 = v61 + v62;
        __ml_acc = v63;
    }
    auto v64 = __ml_acc;
    auto v65 = scale;
    auto v67 = static_cast<float>((v64 * v65));
    out[v_tg] = v67;
}
