crates/wh-iron-std/tests/snapshots/steel_msl_snapshots__steel_gemm_fused_nax_f16_msl.snap
---
source: crates/wh-iron-std/tests/steel_msl_snapshots.rs
expression: msl
---
// Generated by Iron Kernels
#include <metal_stdlib>
using namespace metal;

#if defined(__METAL_VERSION__) && __METAL_VERSION__ >= 400
#include <metal_simdgroup>
#include <MetalPerformancePrimitives/MetalPerformancePrimitives.h>
#endif

kernel void iron_steel_gemm_fused_nax(
    const device half *a [[buffer(0)]],
    const device half *b [[buffer(1)]],
    device half *out [[buffer(2)]],
    constant uint &k [[buffer(3)]],
    constant uint &n [[buffer(4)]],
    uint3 _tgid3 [[threadgroup_position_in_grid]],
    uint simd_lane [[thread_index_in_simdgroup]],
    uint simd_group [[simdgroup_index_in_threadgroup]]
) {
#if defined(__METAL_VERSION__) && __METAL_VERSION__ >= 400
    uint tgid_x = _tgid3.x;
    uint tgid_y = _tgid3.y;
    threadgroup half Xs[1152];
    threadgroup half Ws[1152];
    threadgroup float OutScratch[1024];

    auto v_lane = simd_lane;
    uint v_sg = simd_group;
    uint v2 = 32u;
    auto v_lane_in_tg = ((v_sg * v2) + v_lane);
    uint v5 = 2u;
    uint v7 = 1u;
    uint v9 = 16u;
    auto v_sg_m_base = ((v_sg / v5) * v9);
    uint v11 = 16u;
    auto v_sg_n_base = ((v_sg & v7) * v11);
    auto v13 = tgid_y;
    uint v14 = 32u;
    auto v_x_m_base = v13 * v14;
    auto v16 = tgid_x;
    uint v17 = 32u;
    auto v_w_n_base = v16 * v17;
    // --- CoopTileSetup: gemm (16×16×32) ---
    constexpr auto gemm_desc = mpp::tensor_ops::matmul2d_descriptor(
        /*M=*/16, /*N=*/16, /*K=*/32,
        /*ta=*/false, /*tb=*/true, /*tc=*/false,
        mpp::tensor_ops::matmul2d_descriptor::mode::multiply_accumulate);
    mpp::tensor_ops::matmul2d<gemm_desc, metal::execution_simdgroup> gemm_op;
    auto gemm_ct_a = gemm_op.template get_left_input_cooperative_tensor<half, half, float>();
    auto gemm_ct_b = gemm_op.template get_right_input_cooperative_tensor<half, half, float>();
    auto gemm_ct_c = gemm_op.template get_destination_cooperative_tensor<decltype(gemm_ct_a), decltype(gemm_ct_b), float>();
    for (uint16_t _i = 0; _i < gemm_ct_c.get_capacity(); ++_i) gemm_ct_c[_i] = {};
    uint v19 = 4u;
    auto v_x_m_row = v_lane_in_tg / v19;
    uint v21 = 3u;
    uint v23 = 8u;
    auto v_x_k_quad = (v_lane_in_tg & v21);
    auto v_x_k_base = v_x_k_quad * v23;
    uint v25 = 36u;
    auto v26 = v_x_m_row * v25;
    auto v_x_ws_base = v26 + v_x_k_base;
    uint v28 = 36u;
    auto v_xs_sg_off = v_sg_m_base * v28;
    uint v30 = 36u;
    auto v_ws_sg_off = v_sg_n_base * v30;
    uint v32 = 256u;
    auto v_sg_scratch_off = v_sg * v32;
    auto v_b_n = v_w_n_base + v_x_m_row;
    auto v36 = k;
    auto v38 = v_x_m_base + v_x_m_row;
    auto v39 = v38 * v36;
    uint v42 = 0u;
    uint v43 = 8u;
    uint v44 = 1u;
    uint v50 = 0u;
    uint v51 = 8u;
    uint v52 = 1u;
    uint v35 = 0u;
    uint v37 = 32u;
    for (uint i_0 = v35; i_0 < v36; i_0 += v37) {
        auto v40 = v39 + i_0;
        auto v_a_row_dev_base = v40 + v_x_k_base;
        for (uint i_1 = v42; i_1 < v43; i_1 += v44) {
            auto v45 = v_a_row_dev_base + i_1;
            auto v46 = a[v45];
            auto v48 = v_x_ws_base + i_1;
            float v_av = static_cast<float>(v46);
            Xs[v48] = v_av;
        }
        auto v_b_k_base = i_0 + v_x_k_base;
        for (uint i_2 = v50; i_2 < v51; i_2 += v52) {
            auto v54 = n;
            auto v56 = (((v_b_k_base + i_2) * v54) + v_b_n);
            auto v57 = b[v56];
            auto v59 = v_x_ws_base + i_2;
            float v_bv = static_cast<float>(v57);
            Ws[v59] = v_bv;
        }
        threadgroup_barrier(mem_flags::mem_threadgroup);
        metal::tensor<threadgroup half, metal::extents<int, 36, 16>, metal::tensor_inline> gemm_tA(Xs + v_xs_sg_off, metal::extents<int, 36, 16>{}); gemm_ct_a.load(gemm_tA);
        metal::tensor<threadgroup half, metal::extents<int, 36, 16>, metal::tensor_inline> gemm_tB(Ws + v_ws_sg_off, metal::extents<int, 36, 16>{}); gemm_ct_b.load(gemm_tB);
        gemm_op.run(gemm_ct_a, gemm_ct_b, gemm_ct_c);
        threadgroup_barrier(mem_flags::mem_threadgroup);
    }
    metal::tensor<threadgroup float, metal::extents<int, 16, 16>, metal::tensor_inline> gemm_tC(OutScratch + v_sg_scratch_off, metal::extents<int, 16, 16>{}); gemm_ct_c.store(gemm_tC);
    threadgroup_barrier(mem_flags::mem_threadgroup);
    auto v_out_n_base = v_w_n_base + v_sg_n_base;
    uint v62 = 2u;
    auto v_o_row = v_lane / v62;
    uint v64 = 1u;
    uint v66 = 8u;
    auto v65 = (v_lane & v64);
    auto v_o_col_base = v65 * v66;
    uint v72 = 16u;
    auto v73 = v_o_row * v72;
    auto v74 = v_sg_scratch_off + v73;
    auto v_out_m_base = v_x_m_base + v_sg_m_base;
    auto v77 = v_out_m_base + v_o_row;
    uint v1073741828 = 0u;
    auto v1073741829 = v_o_col_base + v1073741828;
    auto v1073741830 = v74 + v1073741829;
    auto v1073741831 = OutScratch[v1073741830];
    auto v1073741832 = n;
    auto v1073741833 = v_out_n_base + v1073741829;
    half v1073741834 = static_cast<half>(v1073741831);
    auto v1073741835 = ((v77 * v1073741832) + v1073741833);
    out[v1073741835] = v1073741834;
    uint v1073741836 = 1u;
    auto v1073741837 = v_o_col_base + v1073741836;
    auto v1073741838 = v74 + v1073741837;
    auto v1073741839 = OutScratch[v1073741838];
    auto v1073741840 = n;
    auto v1073741841 = v_out_n_base + v1073741837;
    half v1073741842 = static_cast<half>(v1073741839);
    auto v1073741843 = ((v77 * v1073741840) + v1073741841);
    out[v1073741843] = v1073741842;
    uint v1073741844 = 2u;
    auto v1073741845 = v_o_col_base + v1073741844;
    auto v1073741846 = v74 + v1073741845;
    auto v1073741847 = OutScratch[v1073741846];
    auto v1073741848 = n;
    auto v1073741849 = v_out_n_base + v1073741845;
    half v1073741850 = static_cast<half>(v1073741847);
    auto v1073741851 = ((v77 * v1073741848) + v1073741849);
    out[v1073741851] = v1073741850;
    uint v1073741852 = 3u;
    auto v1073741853 = v_o_col_base + v1073741852;
    auto v1073741854 = v74 + v1073741853;
    auto v1073741855 = OutScratch[v1073741854];
    auto v1073741856 = n;
    auto v1073741857 = v_out_n_base + v1073741853;
    half v1073741858 = static_cast<half>(v1073741855);
    auto v1073741859 = ((v77 * v1073741856) + v1073741857);
    out[v1073741859] = v1073741858;
    uint v1073741860 = 4u;
    auto v1073741861 = v_o_col_base + v1073741860;
    auto v1073741862 = v74 + v1073741861;
    auto v1073741863 = OutScratch[v1073741862];
    auto v1073741864 = n;
    auto v1073741865 = v_out_n_base + v1073741861;
    half v1073741866 = static_cast<half>(v1073741863);
    auto v1073741867 = ((v77 * v1073741864) + v1073741865);
    out[v1073741867] = v1073741866;
    uint v1073741868 = 5u;
    auto v1073741869 = v_o_col_base + v1073741868;
    auto v1073741870 = v74 + v1073741869;
    auto v1073741871 = OutScratch[v1073741870];
    auto v1073741872 = n;
    auto v1073741873 = v_out_n_base + v1073741869;
    half v1073741874 = static_cast<half>(v1073741871);
    auto v1073741875 = ((v77 * v1073741872) + v1073741873);
    out[v1073741875] = v1073741874;
    uint v1073741876 = 6u;
    auto v1073741877 = v_o_col_base + v1073741876;
    auto v1073741878 = v74 + v1073741877;
    auto v1073741879 = OutScratch[v1073741878];
    auto v1073741880 = n;
    auto v1073741881 = v_out_n_base + v1073741877;
    half v1073741882 = static_cast<half>(v1073741879);
    auto v1073741883 = ((v77 * v1073741880) + v1073741881);
    out[v1073741883] = v1073741882;
    uint v1073741884 = 7u;
    auto v1073741885 = v_o_col_base + v1073741884;
    auto v1073741886 = v74 + v1073741885;
    auto v1073741887 = OutScratch[v1073741886];
    auto v1073741888 = n;
    auto v1073741889 = v_out_n_base + v1073741885;
    half v1073741890 = static_cast<half>(v1073741887);
    auto v1073741891 = ((v77 * v1073741888) + v1073741889);
    out[v1073741891] = v1073741890;
#else
    // Pre-Metal-4 stub: mpp::tensor_ops is unavailable.
#endif
}
