crates/wh-iron-std/tests/snapshots/steel_msl_snapshots__steel_gemm_gather_nax_f16_msl.snap
---
source: crates/wh-iron-std/tests/steel_msl_snapshots.rs
expression: msl
---
// Generated by Iron Kernels
#include <metal_stdlib>
using namespace metal;

#if defined(__METAL_VERSION__) && __METAL_VERSION__ >= 400
#include <metal_simdgroup>
#include <MetalPerformancePrimitives/MetalPerformancePrimitives.h>
#endif

kernel void iron_steel_gemm_gather_nax(
    const device half *a [[buffer(0)]],
    const device half *b [[buffer(1)]],
    const device uint *lhs_indices [[buffer(2)]],
    const device uint *rhs_indices [[buffer(3)]],
    device half *out [[buffer(4)]],
    constant uint &k [[buffer(5)]],
    constant uint &n [[buffer(6)]],
    uint3 _tgid3 [[threadgroup_position_in_grid]],
    uint simd_lane [[thread_index_in_simdgroup]],
    uint simd_group [[simdgroup_index_in_threadgroup]]
) {
#if defined(__METAL_VERSION__) && __METAL_VERSION__ >= 400
    uint tgid_x = _tgid3.x;
    uint tgid_y = _tgid3.y;
    threadgroup half Xs[1152];
    threadgroup half Ws[1152];
    threadgroup float OutScratch[1024];

    auto v_lane = simd_lane;
    uint v_sg = simd_group;
    uint v2 = 32u;
    auto v_lane_in_tg = ((v_sg * v2) + v_lane);
    uint v5 = 2u;
    uint v7 = 1u;
    uint v9 = 16u;
    auto v_sg_m_base = ((v_sg / v5) * v9);
    uint v11 = 16u;
    auto v_sg_n_base = ((v_sg & v7) * v11);
    auto v13 = tgid_y;
    uint v14 = 32u;
    auto v_x_m_base = v13 * v14;
    auto v16 = tgid_x;
    uint v17 = 32u;
    auto v_w_n_base = v16 * v17;
    // --- CoopTileSetup: gemm (16×16×32) ---
    constexpr auto gemm_desc = mpp::tensor_ops::matmul2d_descriptor(
        /*M=*/16, /*N=*/16, /*K=*/32,
        /*ta=*/false, /*tb=*/true, /*tc=*/false,
        mpp::tensor_ops::matmul2d_descriptor::mode::multiply_accumulate);
    mpp::tensor_ops::matmul2d<gemm_desc, metal::execution_simdgroup> gemm_op;
    auto gemm_ct_a = gemm_op.template get_left_input_cooperative_tensor<half, half, float>();
    auto gemm_ct_b = gemm_op.template get_right_input_cooperative_tensor<half, half, float>();
    auto gemm_ct_c = gemm_op.template get_destination_cooperative_tensor<decltype(gemm_ct_a), decltype(gemm_ct_b), float>();
    for (uint16_t _i = 0; _i < gemm_ct_c.get_capacity(); ++_i) gemm_ct_c[_i] = {};
    uint v19 = 4u;
    auto v_x_m_row = v_lane_in_tg / v19;
    uint v21 = 3u;
    uint v23 = 8u;
    auto v_x_k_quad = (v_lane_in_tg & v21);
    auto v_x_k_base = v_x_k_quad * v23;
    uint v25 = 36u;
    auto v26 = v_x_m_row * v25;
    auto v_x_ws_base = v26 + v_x_k_base;
    uint v28 = 36u;
    auto v_xs_sg_off = v_sg_m_base * v28;
    uint v30 = 36u;
    auto v_ws_sg_off = v_sg_n_base * v30;
    uint v32 = 256u;
    auto v_sg_scratch_off = v_sg * v32;
    auto v34 = v_x_m_base + v_x_m_row;
    auto v_a_src_row = lhs_indices[v34];
    auto v_b_mat = rhs_indices[v16];
    auto v37 = k;
    auto v39 = n;
    auto v38 = v_b_mat * v37;
    auto v_b_base = v38 * v39;
    auto v_b_n = v_w_n_base + v_x_m_row;
    auto v44 = v_a_src_row * v37;
    uint v47 = 0u;
    uint v48 = 8u;
    uint v49 = 1u;
    uint v55 = 0u;
    uint v56 = 8u;
    uint v57 = 1u;
    uint v42 = 0u;
    uint v43 = 32u;
    for (uint i_0 = v42; i_0 < v37; i_0 += v43) {
        auto v45 = v44 + i_0;
        auto v_a_row_dev_base = v45 + v_x_k_base;
        for (uint i_1 = v47; i_1 < v48; i_1 += v49) {
            auto v50 = v_a_row_dev_base + i_1;
            auto v51 = a[v50];
            auto v53 = v_x_ws_base + i_1;
            float v_av = static_cast<float>(v51);
            Xs[v53] = v_av;
        }
        auto v_b_k_base = i_0 + v_x_k_base;
        for (uint i_2 = v55; i_2 < v56; i_2 += v57) {
            auto v59 = ((v_b_k_base + i_2) * v39);
            auto v61 = ((v_b_base + v59) + v_b_n);
            auto v62 = b[v61];
            auto v64 = v_x_ws_base + i_2;
            float v_bv = static_cast<float>(v62);
            Ws[v64] = v_bv;
        }
        threadgroup_barrier(mem_flags::mem_threadgroup);
        metal::tensor<threadgroup half, metal::extents<int, 36, 16>, metal::tensor_inline> gemm_tA(Xs + v_xs_sg_off, metal::extents<int, 36, 16>{}); gemm_ct_a.load(gemm_tA);
        metal::tensor<threadgroup half, metal::extents<int, 36, 16>, metal::tensor_inline> gemm_tB(Ws + v_ws_sg_off, metal::extents<int, 36, 16>{}); gemm_ct_b.load(gemm_tB);
        gemm_op.run(gemm_ct_a, gemm_ct_b, gemm_ct_c);
        threadgroup_barrier(mem_flags::mem_threadgroup);
    }
    metal::tensor<threadgroup float, metal::extents<int, 16, 16>, metal::tensor_inline> gemm_tC(OutScratch + v_sg_scratch_off, metal::extents<int, 16, 16>{}); gemm_ct_c.store(gemm_tC);
    threadgroup_barrier(mem_flags::mem_threadgroup);
    auto v_out_n_base = v_w_n_base + v_sg_n_base;
    uint v67 = 2u;
    auto v_o_row = v_lane / v67;
    uint v69 = 1u;
    uint v71 = 8u;
    auto v70 = (v_lane & v69);
    auto v_o_col_base = v70 * v71;
    uint v77 = 16u;
    auto v78 = v_o_row * v77;
    auto v79 = v_sg_scratch_off + v78;
    auto v82 = ((v_x_m_base + v_sg_m_base) + v_o_row);
    auto v83 = v82 * v39;
    uint v1073741828 = 0u;
    auto v1073741829 = v_o_col_base + v1073741828;
    auto v1073741830 = v79 + v1073741829;
    auto v1073741831 = OutScratch[v1073741830];
    auto v1073741832 = v_out_n_base + v1073741829;
    half v1073741833 = static_cast<half>(v1073741831);
    auto v1073741834 = v83 + v1073741832;
    out[v1073741834] = v1073741833;
    uint v1073741835 = 1u;
    auto v1073741836 = v_o_col_base + v1073741835;
    auto v1073741837 = v79 + v1073741836;
    auto v1073741838 = OutScratch[v1073741837];
    auto v1073741839 = v_out_n_base + v1073741836;
    half v1073741840 = static_cast<half>(v1073741838);
    auto v1073741841 = v83 + v1073741839;
    out[v1073741841] = v1073741840;
    uint v1073741842 = 2u;
    auto v1073741843 = v_o_col_base + v1073741842;
    auto v1073741844 = v79 + v1073741843;
    auto v1073741845 = OutScratch[v1073741844];
    auto v1073741846 = v_out_n_base + v1073741843;
    half v1073741847 = static_cast<half>(v1073741845);
    auto v1073741848 = v83 + v1073741846;
    out[v1073741848] = v1073741847;
    uint v1073741849 = 3u;
    auto v1073741850 = v_o_col_base + v1073741849;
    auto v1073741851 = v79 + v1073741850;
    auto v1073741852 = OutScratch[v1073741851];
    auto v1073741853 = v_out_n_base + v1073741850;
    half v1073741854 = static_cast<half>(v1073741852);
    auto v1073741855 = v83 + v1073741853;
    out[v1073741855] = v1073741854;
    uint v1073741856 = 4u;
    auto v1073741857 = v_o_col_base + v1073741856;
    auto v1073741858 = v79 + v1073741857;
    auto v1073741859 = OutScratch[v1073741858];
    auto v1073741860 = v_out_n_base + v1073741857;
    half v1073741861 = static_cast<half>(v1073741859);
    auto v1073741862 = v83 + v1073741860;
    out[v1073741862] = v1073741861;
    uint v1073741863 = 5u;
    auto v1073741864 = v_o_col_base + v1073741863;
    auto v1073741865 = v79 + v1073741864;
    auto v1073741866 = OutScratch[v1073741865];
    auto v1073741867 = v_out_n_base + v1073741864;
    half v1073741868 = static_cast<half>(v1073741866);
    auto v1073741869 = v83 + v1073741867;
    out[v1073741869] = v1073741868;
    uint v1073741870 = 6u;
    auto v1073741871 = v_o_col_base + v1073741870;
    auto v1073741872 = v79 + v1073741871;
    auto v1073741873 = OutScratch[v1073741872];
    auto v1073741874 = v_out_n_base + v1073741871;
    half v1073741875 = static_cast<half>(v1073741873);
    auto v1073741876 = v83 + v1073741874;
    out[v1073741876] = v1073741875;
    uint v1073741877 = 7u;
    auto v1073741878 = v_o_col_base + v1073741877;
    auto v1073741879 = v79 + v1073741878;
    auto v1073741880 = OutScratch[v1073741879];
    auto v1073741881 = v_out_n_base + v1073741878;
    half v1073741882 = static_cast<half>(v1073741880);
    auto v1073741883 = v83 + v1073741881;
    out[v1073741883] = v1073741882;
#else
    // Pre-Metal-4 stub: mpp::tensor_ops is unavailable.
#endif
}
